@@ -1,5 +1,6 @@
 Akeeba Data Compliance 3.2.0
 ================================================================================
++ Notice about Joomla 4 End of Service
 ~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
 ~ Joomla 5 preparation: Remove obsolete class names
 ~ Block uninstallation of child extensions
